# ADC_C

./: .gitignore  README.md
ADC/: Configure-for-win64-vs2022.bat
ADC/build-win64-vs2022/: ADC.sln  ALL_BUILD.vcxproj  INSTALL.vcxproj  ZERO_CHECK.vcxproj
ADC/build-win64-vs2022/SystemVue/: ADC.cpp  ADC.h  INSTALL.vcxproj  SystemVue-ADC-CG.vcxproj  SystemVue-ADC.vcxproj  Version.rc
ADC/source/: CMakeLists.txt
ADC/source/SystemVue/: ADC.cpp  ADC.h  ADC_model1.cpp  ADC_model1.h  CMakeLists.txt  LibraryProperties.cpp  README.md  spline.cpp  spline.h
